packages/mantine/src/blocknoteStyles.css
@import url("@blocknote/react/style.css");

/* Mantine base styles*/

/* Removes Mantine active styles */
.bn-mantine .mantine-active:active {
  transform: none;
}

/* Mantine Badge component base styles */
.bn-mantine .mantine-Badge-root {
  background-color: var(--bn-colors-tooltip-background);
  color: var(--bn-colors-tooltip-text);
}

/* Mantine FileInput component base styles */
.bn-mantine .mantine-FileInput-input {
  align-items: center;
  background-color: var(--bn-colors-menu-background);
  border: none;
  border-radius: 4px;
  color: var(--bn-colors-menu-text);
  display: flex;
  flex-direction: row;
  font-family: var(--bn-font-family);
  justify-content: center;
}

.bn-mantine .mantine-FileInput-input:hover {
  background-color: var(--bn-colors-hovered-background);
}

.bn-mantine .mantine-FileInput-wrapper {
  border: solid var(--bn-colors-border) 1px;
  border-radius: 4px;
}

.bn-mantine .mantine-InputPlaceholder-placeholder {
  color: var(--bn-colors-menu-text);
  font-family: var(--bn-font-family);
  font-weight: 600;
}

/* Mantine Menu component base styles */
.bn-mantine .mantine-Menu-dropdown,
.bn-mantine .bn-menu-dropdown {
  background-color: var(--bn-colors-menu-background);
  border: var(--bn-border);
  border-radius: var(--bn-border-radius-medium);
  box-shadow: var(--bn-shadow-medium);
  box-sizing: border-box;
  color: var(--bn-colors-menu-text);
  padding: 2px;
  overflow: auto;
}

.bn-mantine .mantine-Menu-label {
  background-color: var(--bn-colors-menu-background);
  color: var(--bn-colors-menu-text);
}

.bn-mantine .mantine-Menu-item {
  background-color: var(--bn-colors-menu-background);
  border: none;
  border-radius: var(--bn-border-radius-small);
  color: var(--bn-colors-menu-text);
}

.bn-mantine .mantine-Menu-item[aria-selected="true"],
.bn-mantine .mantine-Menu-item:hover {
  background-color: var(--bn-colors-hovered-background);
  border: none;
  color: var(--bn-colors-hovered-text);
}

/* Mantine Popover component base styles */
.bn-mantine .bn-panel-popover,
.bn-mantine .bn-emoji-picker-popover {
  background-color: transparent;
  border: none;
  border-radius: 0;
  box-shadow: none;
  display: flex;
  padding: 0;
}

/* Mantine Tabs component base styles */
.bn-mantine .mantine-Tabs-root {
  width: 100%;
  background-color: var(--bn-colors-menu-background);
}

.bn-mantine .mantine-Tabs-list:before {
  border-color: var(--bn-colors-hovered-background);
}

.bn-mantine .mantine-Tabs-tab {
  color: var(--bn-colors-menu-text);
  border-color: var(--bn-colors-hovered-background);
}

.bn-mantine .mantine-Tabs-tab:hover {
  background-color: var(--bn-colors-hovered-background);
  border-color: var(--bn-colors-hovered-background);
  color: var(--bn-colors-hovered-text);
}

.bn-mantine .mantine-Tabs-tab[data-active],
.bn-mantine .mantine-Tabs-tab[data-active]:hover {
  border-color: var(--bn-colors-menu-text);
  color: var(--bn-colors-menu-text);
}

.bn-mantine .mantine-Tabs-panel {
  padding: 8px;
}

/* Mantine TextInput component base styles */
.bn-mantine .mantine-TextInput-input {
  background-color: var(--bn-colors-menu-background);
  border: solid var(--bn-colors-border) 1px;
  border-radius: 4px;
  color: var(--bn-colors-menu-text);
  font-family: var(--bn-font-family);
  height: 32px;
}

.bn-mantine .bn-mt-input-large .mantine-TextInput-input {
  border: none;
  font-size: 14px;
  height: 52px;
}

/* Mantine Tooltip component base styles */
.bn-mantine .mantine-Tooltip-tooltip {
  background-color: transparent;
  border: none;
  border-radius: 0;
  box-shadow: none;
  padding: 0;
}

.bn-mantine .mantine-Tooltip-tooltip p:last-child {
  white-space: pre-wrap;
}

.bn-mantine .mantine-Tooltip-tooltip p:first-child {
  white-space: unset;
}

/* UI element styling */

/* Select styling */
.bn-mantine .bn-select {
  overflow: auto;
}

.bn-mantine .mantine-Button-root[aria-controls*="dropdown"] {
  min-width: fit-content;
}

/* Toolbar styling */
.bn-mantine .bn-toolbar {
  background-color: var(--bn-colors-menu-background);
  border: var(--bn-border);
  border-radius: var(--bn-border-radius-medium);
  box-shadow: var(--bn-shadow-medium);
  flex-wrap: nowrap;
  gap: 2px;
  padding: 2px;
  width: fit-content;
  overflow-x: auto;
  max-width: 100vw;
}

.bn-mantine .bn-toolbar:empty {
  display: none;
}

.bn-toolbar .mantine-Button-root,
.bn-toolbar .mantine-ActionIcon-root {
  background-color: var(--bn-colors-menu-background);
  border: none;
  border-radius: var(--bn-border-radius-small);
  color: var(--bn-colors-menu-text);
}

.bn-toolbar .mantine-Button-root:hover,
.bn-toolbar .mantine-ActionIcon-root:hover {
  background-color: var(--bn-colors-hovered-background);
  border: none;
  color: var(--bn-colors-hovered-text);
}

.bn-toolbar .mantine-Button-root[data-selected],
.bn-toolbar .mantine-ActionIcon-root[data-selected] {
  background-color: var(--bn-colors-selected-background);
  border: none;
  color: var(--bn-colors-selected-text);
}

.bn-toolbar .mantine-Button-root[data-disabled],
.bn-toolbar .mantine-ActionIcon-root[data-disabled] {
  background-color: var(--bn-colors-disabled-background);
  border: none;
  color: var(--bn-colors-disabled-text);
}

.bn-toolbar .mantine-Menu-item {
  font-size: 12px;
  height: 30px;
}

.bn-toolbar .mantine-Menu-item:hover {
  background-color: var(--bn-colors-hovered-background);
}

.bn-mantine .bn-form-popover {
  background-color: var(--bn-colors-menu-background);
  border: var(--bn-border);
  border-radius: var(--bn-border-radius-medium);
  box-shadow: var(--bn-shadow-medium);
  color: var(--bn-colors-menu-text);
  gap: 4px;
  min-width: 145px;
  padding: 2px;
}

.bn-form-popover .mantine-TextInput-root,
.bn-form-popover .mantine-FileInput-root {
  width: 300px;
}

.bn-form-popover .mantine-TextInput-wrapper,
.bn-form-popover .mantine-FileInput-wrapper {
  padding: 0;
  border-radius: 4px;
}

.bn-form-popover .mantine-TextInput-wrapper:hover {
  background-color: var(--bn-colors-hovered-background);
}
/* ... */

